--- a/3.http/index.html
+++ b/3.http/index.html
@@ -3,13 +3,9 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title></title>
-    <style>
-        body{
-            color:red;
-        }
-    </style>
+    <link rel="stylesheet" href="index.css"/>
 </head>
 <body>
-hello world
+<%=name%>
 </body>
 </html>
