支持上传图片

--- a/13.http/reg.html
+++ b/13.http/reg.html
@@ -5,9 +5,10 @@
     <title></title>
 </head>
 <body>
-<form action="/reg" method="post" enctype="application/x-www-form-urlencoded">
+<form action="/reg" method="post" enctype="multipart/form-data">
    用户名 <input type="text" name="username"/>
     密码 <input type="text" name="password"/>
+    头像 <input type="file" name="headlike"/>
     <input type="submit" value="注册"/>
 </form>
 </body>
