--- a/14.express/tmpl/login-bak.html
+++ b/14.express/tmpl/login-bak.html
@@ -6,9 +6,10 @@
 </head>
 <body>
 
-<form action="/login" method="post">
+<form action="/login" method="post" enctype="multipart/form-data">
     用户名 <input type="text" name="username"/>
     密码 <input type="text" name="password"/>
+    头像 <input type="file" name="avatar"/>
     <input type="submit" value="登录"/>
 </form>
 </body>
