--- a/15.http_ext/index.html
+++ b/15.http_ext/index.html
@@ -5,6 +5,6 @@
     <title></title>
 </head>
 <body>
-hello
+<img src="http://d.hiphotos.baidu.com/baike/c0%3Dbaike80%2C5%2C5%2C80%2C26/sign=41beaf97eac4b7452099bf44ae957572/9213b07eca806538473c8dad96dda144ac3482bd.jpg" alt=""/>
 </body>
 </html>
