--- a/19.angular/4.directive/6.form.html
+++ b/19.angular/4.directive/6.form.html
@@ -6,21 +6,25 @@
     <link rel="stylesheet" href="bootstrap.css"/>
 </head>
 <body>
-<div class="container">
-    <form action="" name="form" ng-controller="FormCtrl">
-        <div class="form-group" >
-            <label class="col-md-2" for="username" class="control-label">用户名</label>
-            <input class="col-md-6 form-control" type="text" id="username" ng-model="user.username"  required/>
-            <div class="col-md-4" ng-show="form.username.$invalid">
-                <span ng-show="form.username.$error.required">请输入用户名</span>
+<div class="container" ng-controller="FormCtrl">
+    <form action="" novalidate name="form"  role="form">
+        <div class="form-group row" ng-class="{'has-error':form.username.$invalid&&form.username.$dirty}" >
+            <label class="col-md-2 control-label " for="username" class="control-label">用户名</label>
+            <div class="col-md-4">
+                <input ng-unique class="form-control" name="username" type="text" id="username" ng-model="user.username"  ng-required/>
+            </div>
+            <div class="help-block col-md-4" ng-show="form.username.$invalid && form.username.$dirty">
+                <span class="text-danger" ng-show="form.username.$error.required">请输入用户名</span>
             </div>
         </div>
-        <div class="form-group">
-            <label class="col-md-2" for="email" class="control-label">邮箱</label>
-            <input class="col-md-6 form-control" type="email" id="email" ng-model="user.email"  required/>
-            <div class="col-md-4" ng-show="form.email.$invalid">
-                <span ng-show="form.email.$error.required">请输入邮箱</span>
-                <span ng-show="form.email.$error.email">请输入合法的邮箱</span>
+        <div class="form-group row" ng-class="{'has-error':form.email.$invalid}" >
+            <label class="col-md-2 control-label " for="email" class="control-label">邮箱</label>
+            <div class="col-md-4">
+                <input ng-unique class="form-control" name="email" type="email" id="email" ng-model="user.email"  ng-required/>
+            </div>
+            <div class="help-block col-md-4" ng-show="form.email.$invalid">
+                <span class="text-danger" ng-show="form.email.$error.required">请输入邮箱</span>
+                <span class="text-danger" ng-show="form.email.$error.email">请输入正确的邮箱</span>
             </div>
         </div>
         <div class="form-group">
@@ -29,13 +33,30 @@
     </form>
 </div>
 </body>
-<script src="../angular.js"></script>
+<script src="angular.js"></script>
 <script>
 var app = angular.module('appModule',[]);
 app.controller('FormCtrl',function($scope){
+    $scope.user = {};
     $scope.save = function(){
 
     }
+});
+
+app.directive('ngUnique',function($http){
+  return {
+      require:'ngModel',
+      link:function(scope,ele,attrs,ngModelCtrl){
+          scope.$watch(attrs.ngModel,function(){
+              // {isUnique:true}
+              $http.post('http://localhost:8080/api/check',{"username":scope.user.username}).success(function(data){
+                ngModelCtrl.$setValidity('unique',data.isUnique);
+              }).error(function(){
+                  ngModelCtrl.$setValidity('unique',false);//设置此字段的有效性
+              });
+          });
+      }
+  }
 });
 </script>
 </html>
